--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
   ],
   "routes": [
     { "src": "/zubair", "dest": "/zubair.js" },
-        { "src": "/mashoq", "dest": "/mashoq.js" },
-    { "src": "/mashoqpass", "dest": "/mashoqpass.js" },
+        { "src": "/chumpa", "dest": "/chumpa.js" },
+    { "src": "/chumpapass", "dest": "/chumpapass.js" },
 { "src": "/fm", "dest": "/fm.js" },
     { "src": "/fmpass", "dest": "/fmpass.js" },
     { "src": "/tm", "dest": "/tm.js" },
