--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
         { "src": "/tufailpass", "dest": "/tufailpass.js" },
     { "src": "/babar", "dest": "/babar.js" },
 { "src": "/babarpass", "dest": "/babarpass.js" },
-    { "src": "/latifpass", "dest": "/latifpass.js" },
-    { "src": "/taufiq", "dest": "/taufiq.js" },
+    { "src": "/rawal", "dest": "/rawal.js" },
+    { "src": "/rawalpass", "dest": "/rawalpass.js" },
     { "src": "/taufiqpass", "dest": "/taufiqpass.js" },
     { "src": "/hanif", "dest": "/hanif.js" },
     { "src": "/hanifpass", "dest": "/hanifpass.js" },
