--- a/vercel.json
+++ b/vercel.json
@@ -10,8 +10,8 @@
 { "src": "/babarpass", "dest": "/babarpass.js" },
     { "src": "/rawal", "dest": "/rawal.js" },
     { "src": "/rawalpass", "dest": "/rawalpass.js" },
-    { "src": "/taufiqpass", "dest": "/taufiqpass.js" },
-    { "src": "/hanif", "dest": "/hanif.js" },
+    { "src": "/tahir", "dest": "/tahir.js" },
+    { "src": "/tahirpass", "dest": "/tahirpass.js" },
     { "src": "/hanifpass", "dest": "/hanifpass.js" },
     { "src": "/ayan", "dest": "/ayan.js" },
     { "src": "/ayanpass", "dest": "/ayanpass.js" },
